syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.orangetalents";
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.orangetalents;
import "google/protobuf/timestamp.proto";

service KeyManagerRegisterGrpcService {
  rpc registraChavePix(ChavePixRequest) returns (ChavePixResponse) {}
}

service KeyManagerRemoveGrpcService {
  rpc removerChavePix(RemoveChavePixRequest) returns (RemoveChavePixResponse) {}
}

service KeyManagerConsultGrpcService {
  rpc consultarChavePix(ConsultarChavePixRequest) returns (ConsultarChavePixResponse) {}
}

service KeyManagerListGrpcService {
  rpc listarChavesPix(ListarChavePixRequest) returns (ListarChavePixResponse) {}
}

enum TipoDeConta {
  TIPO_CONTA_DESCONHECIDO = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoDeChave {
  TIPO_CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIO = 4;
}

message ChavePixRequest {
  string codigoCliente = 1;
  TipoDeChave tipoChave = 2;
  string chave = 3;
  TipoDeConta tipoConta = 4;
}

message ChavePixResponse {
  string pixId = 1;
}

message RemoveChavePixRequest {
  string pixId = 1;
  string codigoCliente = 2;
}

message RemoveChavePixResponse {
  bool status = 1;
}

message ConsultarChavePixRequest {
  message ClientIdPixId {
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filtro {
    string chave = 1;
    ClientIdPixId pixId = 4;
  }
}

message ConsultarChavePixResponse {
  message ChavePixGrpc {

    message ContaInfo {
      TipoDeConta tipo     = 1;
      string instituicao   = 2;
      string nomeDoTitular = 3;
      string cpfDoTitular  = 4;
      string agencia       = 5;
      string numeroDaConta = 6;
    }

    TipoDeChave tipo        = 1;
    string chave            = 2;
    ContaInfo conta         = 3;
    google.protobuf.Timestamp criadaEm = 4;
  }

  string clienteId = 1;
  string pixId     = 2;
  ChavePixGrpc chave   = 3;
}

message ListarChavePixRequest {
  string clienteId = 1;
}

message ListarChavePixResponse {
  message ChavePixInfo {
    string pixId = 1;
    string clienteId = 2;
    TipoDeChave tipoChave = 3;
    TipoDeConta tipoConta = 4;
    google.protobuf.Timestamp criadaEm = 5;
  }

  string clienteId = 1;
  repeated ChavePixInfo chaves = 2;
}